package ar.edu.utn.frc.tup.lciii.videos.models;

public enum MatchStatus {
    STARTED, FINISHED, CANCELED
}
