@startuml

class Player {
    Long id
    String userName
    String password
    String email
    String avatar
    LocalDateTime lastLogin
}

class Game {
    Long id
    String code
    String name
    String description
    String rules
}

abstract Match {
    Long id
    Game game
    Player player
    LocalDateTime createdDate
    MatchStatus status
}

enum MatchStatus {
    STARTED
    FINISHED
    CANCELED
}


MatchStatus --* Match
Player --* Match
Game --* Match


@enduml